name:               hasktendo64
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           frivolity
description:        README.md
license:            BSD3
license-file:       LICENSE
author:             ARM9
maintainer:         https://github.com/ARM9
copyright:          (c) 2016 me
category:           Game
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

flag debug
    description: Debug build
    default: False

executable hasktendo64
    hs-source-dirs:     src
    main-is:            Main.hs
    other-modules:      N64 VR4300
    if flag(debug)
        ghc-options:    -Wall -O
    else
        ghc-options:    -Wall -O2
        --funbox-strict-fields
    build-depends:      base >=4.7 && < 5
                      , binary-strict
                      , bytestring, vector
    default-extensions: BangPatterns BinaryLiterals MagicHash OverloadedStrings
                        ScopedTypeVariables
    default-language:   Haskell2010
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
