name:               hasktendo64
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           frivolity
description:        README.md
license:            BSD3
license-file:       LICENSE
author:             ARM9
maintainer:         https://github.com/ARM9
copyright:          (c) 2016 me
category:           Game
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

-- flag debug
--     description: Debug build
--     default: False

library
    hs-source-dirs:     src
    exposed-modules:    N64 Memory Mips3 Mips3_64 VR4300
    other-modules:
    build-depends:      base >=4.7 && < 5
                      , binary-strict
                      , bytestring, vector
    default-extensions: BangPatterns BinaryLiterals MagicHash OverloadedStrings
                        ScopedTypeVariables
    default-language:   Haskell2010

executable hasktendo64
    hs-source-dirs:     app
    main-is:            Main.hs
    -- if flag(debug)
    --     ghc-options:    -Wall -O
    -- else
    --     ghc-options:    -Wall -O
    ghc-options:        -Wall -O
    build-depends:      base
                      , bytestring
                      , hasktendo64
    default-extensions: BangPatterns BinaryLiterals MagicHash OverloadedStrings
                        ScopedTypeVariables
    default-language:   Haskell2010
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

test-suite hasktendo64-test
     type:               exitcode-stdio-1.0
     hs-source-dirs:     test
     main-is:            Spec.hs
     build-depends:      base
                       , hasktendo64
     ghc-options:        -Wall -O -threaded -rtsopts -with-rtsopts=-N
     default-language:   Haskell2010

source-repository head
    type:       git
    location:   https://github.com/ARM9/hasktendo64
